--- a/examples/package.json
+++ b/examples/package.json
@@ -24,5 +24,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "loadtest": "^8.0.9",
+    "pm2": "^5.4.2"
   }
 }
